--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         }
 
         .transaction:hover {
-            background: #f9f9f9;
+            background: #f5f5f5;
             padding: 16px;
             margin: 0 -16px;
             padding-left: 16px;
@@ -463,6 +463,7 @@
             border-radius: 8px;
             padding: 20px;
             margin: 20px 0;
+            box-shadow: none;
         }
 
         .receipt-header {
@@ -643,7 +644,7 @@
         <div class="statement-section">
             <div class="statement-header">
                 <div class="statement-title">Extrato</div>
-                <button class="filter-btn" onclick="alert('Filtros em desenvolvimento')">Filtrar</button>
+                <button class="filter-btn" onclick="showFilterModal()">Filtrar</button>
             </div>
             <div class="date-label" id="dateLabel"></div>
             <div id="transactionList"></div>
@@ -827,6 +828,40 @@
         </div>
     </div>
 
+    <!-- FILTER MODAL -->
+    <div id="filterModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="modal-title">Filtrar Extrato</div>
+                <button class="modal-close" onclick="closeFilterModal()">×</button>
+            </div>
+
+            <div class="form-group">
+                <label class="form-label">Tipo de Transação</label>
+                <select id="filterType" class="form-input">
+                    <option value="">Todas</option>
+                    <option value="Pix enviado">Pix Enviado</option>
+                    <option value="Pix recebido">Pix Recebido</option>
+                    <option value="Transferência">Transferência</option>
+                    <option value="Pagamento">Pagamento</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label class="form-label">Ordenar Por</label>
+                <select id="filterSort" class="form-input">
+                    <option value="recent">Mais Recente</option>
+                    <option value="older">Mais Antigo</option>
+                    <option value="higher">Maior Valor</option>
+                    <option value="lower">Menor Valor</option>
+                </select>
+            </div>
+
+            <button class="btn-primary" onclick="applyFilter()">Aplicar Filtros</button>
+            <button class="btn-secondary" onclick="closeFilterModal()">Cancelar</button>
+        </div>
+    </div>
+
     <script>
         const translations = {
             pt: {
@@ -848,6 +883,7 @@
         let currentLanguage = 'pt';
         let balanceVisible = true;
         let balance = 274.04;
+        let transactionsBackup = [];
         let transactions = [
             { merchant: 'Pix enviado', recipient: 'Raul Costa Xavier', category: 'Transferência', amount: -230, date: '09 Jan, 18:23', key: '095.085.989-30', bank: 'Nubank', e2eId: 'E26010921862350109230xOtfZ2IlRkn', txId: 'D2601090623260109023xT5mK9pQwLx', ispb: '18236120' },
             { merchant: 'Pix recebido', recipient: 'Lucas Barbosa De Oliveira', category: 'Transferência', amount: 500, date: '08 Jan, 16:45', type: 'credit' },
@@ -863,6 +899,37 @@
             updateTransactions();
             const dateLabel = document.getElementById('dateLabel');
             dateLabel.textContent = translations[currentLanguage].today + ' · ' + new Date().toLocaleDateString('pt-BR', { day: '2-digit', month: 'short' });
+        }
+
+        function showFilterModal() {
+            document.getElementById('filterModal').classList.add('active');
+        }
+
+        function closeFilterModal() {
+            document.getElementById('filterModal').classList.remove('active');
+        }
+
+        function applyFilter() {
+            const typeFilter = document.getElementById('filterType').value;
+            const sortFilter = document.getElementById('filterSort').value;
+
+            let filtered = transactionsBackup.slice();
+
+            if (typeFilter) {
+                filtered = filtered.filter(tx => tx.merchant.includes(typeFilter));
+            }
+
+            if (sortFilter === 'older') {
+                filtered.reverse();
+            } else if (sortFilter === 'higher') {
+                filtered.sort((a, b) => Math.abs(b.amount) - Math.abs(a.amount));
+            } else if (sortFilter === 'lower') {
+                filtered.sort((a, b) => Math.abs(a.amount) - Math.abs(b.amount));
+            }
+
+            transactions = filtered;
+            updateTransactions();
+            closeFilterModal();
         }
 
         function updateBalance() {
@@ -881,8 +948,8 @@
                 return;
             }
 
-            list.innerHTML = transactions.map(tx => `
-                <div class="transaction" onclick="showTransactionDetail(${transactions.indexOf(tx)})">
+            list.innerHTML = transactions.map((tx, idx) => `
+                <div class="transaction" onclick="showTransactionDetail(${transactionsBackup.indexOf(tx)})">
                     <div class="tx-left">
                         <div class="tx-merchant">${tx.merchant}</div>
                         <div class="tx-category">${tx.category} • ${tx.date}</div>
@@ -1079,7 +1146,7 @@
             if (cpfRegex.test(key.replace(/\D/g, ''))) {
                 const clean = key.replace(/\D/g, '');
                 if (clean.length === 11) {
-                    return clean.replace(/(\d{3})(\d{3})(\d{3})(\d{2})/, '$1.$2.$3-$4');
+                    return '***.' + clean.slice(3, 6) + '.' + clean.slice(6, 9) + '-**';
                 }
             }
             
@@ -1237,6 +1304,7 @@
 
         // Initialize
         document.addEventListener('DOMContentLoaded', function() {
+            transactionsBackup = transactions.slice();
             updateUI();
         });
     </script>
