--- a/index.html
+++ b/index.html
@@ -885,9 +885,9 @@
         let balance = 274.04;
         let transactionsBackup = [];
         let transactions = [
-            { merchant: 'Pix enviado', recipient: 'Raul Costa Xavier', category: 'Transferência', amount: -230, date: '09 Jan, 18:23', key: '095.085.989-30', bank: 'Nubank', e2eId: 'E26010921862350109230xOtfZ2IlRkn', txId: 'D2601090623260109023xT5mK9pQwLx', ispb: '18236120' },
-            { merchant: 'Pix recebido', recipient: 'Lucas Barbosa De Oliveira', category: 'Transferência', amount: 500, date: '08 Jan, 16:45', type: 'credit' },
-            { merchant: 'Pix recebido', recipient: 'Lucas Barbosa De Oliveira', category: 'Transferência', amount: 0.04, date: '08 Jan, 15:30', key: '123.456.789-00', bank: 'BTG Pactual', e2eId: 'E26010821542108008xPxQmL2NrJw', txId: 'D2608082154210800xW3nL5tKjXy', ispb: '17187218', type: 'credit' }
+            { merchant: 'Pix enviado', recipient: 'Raul Costa Xavier', category: 'Transferência', amount: -230, date: '09 Jan', time: '18:23', fullTime: '18:23:25', key: '095.085.989-30', bank: 'Nubank', e2eId: 'E26010921862350109230xOtfZ2IlRkn', txId: 'D2601090623260109023xT5mK9pQwLx', ispb: '18236120' },
+            { merchant: 'Pix recebido', recipient: 'Lucas Barbosa De Oliveira', category: 'Transferência', amount: 500, date: '09 Jan', time: '06:23', fullTime: '06:23:25', key: '088.720.019-27', bank: 'C6 Bank', e2eId: 'E26010906232509500xDkL3nVwMpQ', txId: 'D2609090623250950xR2mK8pXyLz', ispb: '13140519', type: 'credit' },
+            { merchant: 'Pix recebido', recipient: 'Lucas Barbosa De Oliveira', category: 'Transferência', amount: 0.04, date: '08 Jan', time: '15:30', fullTime: '15:30:28', key: '088.720.019-27', bank: 'C6 Bank', e2eId: 'E26010815302808004xQxMpL3NsJx', txId: 'D2608081530280800xV3nL5tKjYw', ispb: '13140519', type: 'credit' }
         ];
 
         function getLang(key) {
@@ -948,17 +948,31 @@
                 return;
             }
 
-            list.innerHTML = transactions.map((tx, idx) => `
-                <div class="transaction" onclick="showTransactionDetail(${transactionsBackup.indexOf(tx)})">
-                    <div class="tx-left">
-                        <div class="tx-merchant">${tx.merchant}</div>
-                        <div class="tx-category">${tx.category} • ${tx.date}</div>
+            let groupedByDate = {};
+            transactions.forEach(tx => {
+                if (!groupedByDate[tx.date]) {
+                    groupedByDate[tx.date] = [];
+                }
+                groupedByDate[tx.date].push(tx);
+            });
+
+            let html = '';
+            Object.keys(groupedByDate).forEach(date => {
+                html += `<div style="font-size: 12px; color: #999; margin-top: 20px; margin-bottom: 12px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px;">${date}</div>`;
+                html += groupedByDate[date].map(tx => `
+                    <div class="transaction" onclick="showTransactionDetail(${transactionsBackup.indexOf(tx)})">
+                        <div class="tx-left">
+                            <div class="tx-merchant">${tx.merchant}</div>
+                            <div class="tx-category">${tx.category} • ${tx.time}</div>
+                        </div>
+                        <div class="tx-amount ${tx.amount < 0 ? 'debit' : 'credit'}">
+                            ${tx.amount < 0 ? '' : '+'}R$ ${Math.abs(tx.amount).toFixed(2).replace('.', '.')}
+                        </div>
                     </div>
-                    <div class="tx-amount ${tx.amount < 0 ? 'debit' : 'credit'}">
-                        ${tx.amount < 0 ? '' : '+'}R$ ${Math.abs(tx.amount).toFixed(2).replace('.', '.')}
-                    </div>
-                </div>
-            `).join('');
+                `).join('');
+            });
+
+            list.innerHTML = html;
         }
 
         function toggleBalance() {
@@ -1042,7 +1056,7 @@
                     </div>
                     <div style="display: flex; justify-content: space-between; margin-bottom: 12px; padding-bottom: 12px; border-bottom: 1px solid #e0e0e0;">
                         <span style="color: #999;">Data e Hora</span>
-                        <strong>${tx.date}</strong>
+                        <strong>${tx.date} ${tx.fullTime}</strong>
                     </div>
                     <div style="display: flex; justify-content: space-between; margin-bottom: 12px; padding-bottom: 12px; border-bottom: 1px solid #e0e0e0;">
                         <span style="color: #999;">Status</span>
@@ -1146,7 +1160,7 @@
             if (cpfRegex.test(key.replace(/\D/g, ''))) {
                 const clean = key.replace(/\D/g, '');
                 if (clean.length === 11) {
-                    return '***.' + clean.slice(3, 6) + '.' + clean.slice(6, 9) + '-**';
+                    return clean.slice(0, 3) === '088' ? '***.' + clean.slice(3, 6) + '.' + clean.slice(6, 9) + '-27' : '***.' + clean.slice(3, 6) + '.' + clean.slice(6, 9) + '-**';
                 }
             }
             
